--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "popper.js": "^1.16.1",
         "vue": "^2.6.11",
         "vue-i18n": "^8.16.0",
+        "vue-owl-carousel": "^2.0.3",
         "vue-router": "^3.1.6",
         "vue-scrollto": "^2.17.1"
     },
